Update readme, gradle, and vbox bash script for final submission